--- a/webmaker-nav/css/webmaker-nav.less
+++ b/webmaker-nav/css/webmaker-nav.less
@@ -299,6 +299,25 @@
   }
 }
 
+/*********************************************************
+* Blocks
+*/
+.wm-unit {
+  .clearfix();
+  &-side,
+  &-side-r {
+    margin-right: 10px;
+  }
+  &-side {
+    float: left;
+  }
+  &-side-r {
+    float: right;
+  }
+  &-body {
+    display: table;
+  }
+}
 
 /*********************************************************
 * Tooltip
